homelab/authelia/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia-redis
  namespace: authelia
  labels:
    app: authelia-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia-redis
  template:
    metadata:
      labels:
        app: authelia-redis
    spec:
      containers:
        - name: redis
          image: redis:8-alpine@sha256:2afba59292f25f5d1af200496db41bea2c6c816b059f57ae74703a50a03a27d0
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: auth-redis
  namespace: authelia
spec:
  selector:
    app: authelia-redis
  ports:
    - port: 6379
      targetPort: 6379
