homelab/authelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: authelia
  labels:
    app: authelia
spec:
  selector:
    app: authelia
  ports:
    - name: http
      port: 80
      targetPort: 9091
    - name: metrics
      port: 9959
      targetPort: 9959
